--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,46 @@ tabula-py==2.9.0
 sqlparse==0.5.0
 # For NLP summarization (optional, can remove if not needed)
 transformers==4.41.2
+# Core web framework
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+
+# DB / SQL
+sqlalchemy==2.0.30
+psycopg2-binary==2.9.9
+
+# Data science
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.0
+statsmodels==0.14.2
+
+# Optional forecasting — note: prophet may require extra build tools (cmdstan) on some platforms
+prophet==1.1.5
+
+# File formats
+openpyxl==3.1.2
+pyarrow==16.1.0
+
+# Helpers / HTTP
+httpx==0.27.0
+requests==2.32.3
+python-dotenv==1.0.1
+python-multipart==0.0.6
+
+# Observability / logging
+loguru==0.7.2
+prometheus-client==0.20.0
+
+# Caching/queue
+redis==5.0.4
+
+# Testing
+pytest==8.2.2
+pytest-cov==5.0.0
+
+# SQL formatting/parsing
+sqlparse==0.5.0
+
+# (Optional) Transformer models — keep if you'll load local models (can be removed to reduce footprint)
+transformers==4.41.2
