--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pydantic==2.7.3
 pytest==8.2.2
 pytest-cov==5.0.0
 httpx==0.27.0
+aioredis==2.0.1
 loguru==0.7.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
