--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,13 @@ numpy==1.26.4
 fastapi-limiter
 scikit-learn==1.5.0
 statsmodels==0.14.2
+fastapi
+uvicorn
+pandas
+openpyxl
+PyPDF2
+# plus all your other deps...
+
 prophet==1.1.5
 pydantic==2.7.3
 pytest==8.2.2
